# expose_canister_metrics_for_scraper

./: Cargo.toml  README.md  dfx.json
script/ic/: upgrade.sh
script/local/: install.sh  upgrade.sh
src/backend/: Cargo.toml  can.did
src/backend/src/: canister_data.rs  lib.rs  stable_memory_serializer_deserializer.rs  status.rs  timer.rs
src/backend/src/canister_lifecycle/: init.rs  post_upgrade.rs  pre_upgrade.rs
src/expose_canister_metrics_for_scraper_backend/: Cargo.toml
