[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9.10"
ic-cdk = "0.10.0"
ic-cdk-timers = "0.4.0"
rmp-serde = "1.1.2"
serde = "1.0.182"
